redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    app: redis
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        version: v1.0.0
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        version: v2.0.0
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
