istio-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: client-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-destination
spec:
  host: client-service.test.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 30ms
  subsets:
  # v1 subsetsの場合version=v1.0.0のLabelのついたPodsにトラフィックを流す
  - name: v1
    labels: 
      version: v1.0.0
  - name: v2
    labels: 
      version: v2.0.0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client
spec:
  hosts:
  - "*"
  gateways:
  - client-gateway
  http:
  # uri / の場合
  #   80%の確率でv1を表示
  #   20%の確率でv2を表示
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: client-service.test.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 80
    - destination:
        host: client-service.test.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 20
  # uri /v1.0.0 の場合はv1を表示
  # uri /v2.0.0 の場合はv2を表示
  - match:
    - uri:
        exact: /v1.0.0
    route:
    - destination:
        host: client-service.test.svc.cluster.local
        subset: v1
        port:
          number: 80
  - match:
    - uri:
        exact: /v2.0.0
    route:
    - destination:
        host: client-service.test.svc.cluster.local
        subset: v2
        port:
          number: 80
  # /testのuri
  #   Cookieにtest=trueがある場合はv2を表示
  #   ない場合はv1を表示
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(test=true)(;.*)?$"
      uri:
        exact: /test
    route:
    - destination:
        host: client-service.test.svc.cluster.local
        subset: v2
        port:
          number: 80
  - match:
    - headers:
      uri:
        exact: /test
    route:
    - destination:
        host: client-service.test.svc.cluster.local
        subset: v1
        port:
          number: 80
